# mssql_mcp_server_transaction_analysis

./: app.py  pyproject.toml  requirements.txt  test_connection.py
src/: app.py  claude_integration.py  nl_to_sql.py
src/mssql_mcp_server/: server.py
src/templates/: index.html
templates/: index.html
tests/: conftest.py
